# url-dispatcher

./: Cargo.toml  README.md
.github/workflows/: build.yml
assets/: url-dispatcher.desktop
docs/: architecture.md  product.md  usage.md
src/: actions.rs  app.rs  config.rs  i18n.rs  lib.rs  main.rs  platform.rs  ui_dispatch.rs  ui_settings.rs
tests/: test_actions.rs  test_config.rs  test_i18n.rs
