[package]
name = "url-dispatcher"
version = "0.2.0"
edition = "2021"
description = "A configurable URL dispatcher that can be set as the default browser"
license = "MIT"
repository = "https://github.com/ai2master/url-dispatcher"

[dependencies]
eframe = { version = "0.30", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
arboard = "3"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# 双语文档注释使用对齐缩进，此 lint 不适用
# Bilingual doc comments use aligned indentation
doc_overindented_list_items = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# ─── deb 打包配置 | Debian package metadata ──────────────────────────────────
[package.metadata.deb]
maintainer = "ai2master"
copyright = "2026, ai2master"
extended-description = """\
URL Dispatcher 是一个可配置的 URL 分发器，可以注册为系统默认浏览器。\
收到 URL 后，用户可以选择将其复制到剪贴板、追加到文件或用指定浏览器打开。\
\n\
URL Dispatcher is a configurable URL dispatcher that registers as the default \
browser. Upon receiving a URL, users can copy it, append to file, or open in \
a specified browser."""
section = "web"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/url-dispatcher", "usr/bin/", "755"],
    ["assets/url-dispatcher.desktop", "usr/share/applications/", "644"],
    ["assets/url-dispatcher.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["assets/url-dispatcher.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

# ─── rpm 打包配置 | RPM package metadata ─────────────────────────────────────
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/url-dispatcher", dest = "/usr/bin/url-dispatcher", mode = "755" },
    { source = "assets/url-dispatcher.desktop", dest = "/usr/share/applications/url-dispatcher.desktop", mode = "644" },
    { source = "assets/url-dispatcher.png", dest = "/usr/share/icons/hicolor/256x256/apps/url-dispatcher.png", mode = "644" },
    { source = "assets/url-dispatcher.svg", dest = "/usr/share/icons/hicolor/scalable/apps/url-dispatcher.svg", mode = "644" },
]
